--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ locale                   : "en-US"
 title                    : "Xiaotian Liu"
 title_separator          : "-"
 name                     : &name "Xiaotian Liu"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : &description "personal description" 
+url                      : https://jackliuto.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://jackliuto.github.io/"
+repository               : "https://github.com/jackliuto"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
