--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,14 +9,14 @@ main:
 #   - title: "Teaching"
 #     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+#   - title: "Portfolio"
+#     url: /portfolio/
         
 #   - title: "Blog Posts"
 #     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: https://jackliuto.github.io/files/XiaotianLiu_CV.pdf
     
 #   - title: "Guide"
 #     url: /markdown/
