--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Xiaotian Liu"
   avatar           : "profile.png"
   bio              : "MSc in Computing at Queen's University"
-  location         : "Location"
+  location         : "Kingston, Ontario, Canada"
   employer         :
   pubmed           : 
   googlescholar    : 
